# Gromacs_WEB_UI

./: .gitignore  .zenodo.json  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  TESTING_WITH_TUTORIAL_DATA.md  environment.lock.txt  environment.lock.yml  environment.yml  main.py  pyproject.toml  requirements.txt  run_autonomy.py  simulation_state.json
.claude/: settings.local.json
docs/: ARCHITECTURE.md  LITERATURE_ESCALATION.md  PROTOCOL_CONTRACT.md  RESOLVED_RUN_PLAN.md  SECURITY_THREAT_MODEL.md  STATE_SCHEMA.md  WARNING_FLOW.md  independent_entry_guide.md  jcim_submission_roadmap.md  journal_readiness_evaluation.md  pipeline_contract.md  prestudy.md  runbook.md  simulation_criteria.md
lib/: __init__.py  cgenff.py  gmx_wrapper.py  ligand_params.py  literature_retrieval.py  membrane_builder.py  pdb_analyzer.py  pdb_preprocessor.py  protocol_contract.py  protonation.py  run_plan.py  state.py  system_config.py  system_config_validator.py  tutorial_auditor.py  tutorial_registry.py  validators.py  xvg_parser.py
scripts/: _pubstyle.py  check_gromacs_env.py  collect_metrics.py  format_table1.py  plot_fep_convergence.py  plot_validation.py  regression_multi_pdb.sh  regression_summary.py  run_benchmark.py
skills/: SKILLS_OVERVIEW.md  gmx_executor.md  mdp_composer.md  system_validator.md
tests/: conftest.py  test_api_download.py  test_api_mol_files.py  test_api_protonation_preprocessing.py  test_api_runs.py  test_api_static.py  test_env_builder.py  test_experimental_override_approval.py  test_ligand_api.py  test_llm_runner.py  (+30 more)
(+183 files in other folders)
